# uzbek-tagger-bert

./: CITATION.cff  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  pyproject.toml
.github/workflows/: python-tests.yml
benchmark/: README.md  evaluate.py  results.csv  speed_test.py
docs/: installation.md  tagset.md  usage.md
examples/: basic_usage.py  batch_tagging.py  cli_usage.py  export_conll.py
repo/src/uzbek_tagger_bert/: __init__.py  cli.py  label_map.py  model_loader.py  tagger.py  tokenizer_utils.py
tests/: test_import.py  test_label_map.py  test_model_integration_optional.py  test_output_format.py  test_punctuation.py  test_tokenizer_utils.py
